curso-kubernetes-front-back-db/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-back-ingress
spec:
  rules: 
  - host: front-db.server.com
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: k8s-fbdb-front
              port:
                number: 80
  - host: api.server.com
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: k8s-fbdb-back
              port:
                number: 3000
